_Source/force-app/main/default/objects/BI_Tactical_Line_Item__c/BI_Tactical_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Tactical Line Item</label>
    <nameField>
        <displayFormat>ITEM-{000000}</displayFormat>
        <label>Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tactical Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>