_Source/force-app/main/default/objects/BI_Tactical_Line_Item__c/fields/BI_Digital_Science__c.field-meta.xml
<CustomField>
    <fullName>BI_Digital_Science__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Science</label>
    <type>Checkbox</type>
</CustomField>