_Source/force-app/main/default/objects/BI_Tactical_Line_Item__c/fields/BI_Discount__c.field-meta.xml
<CustomField>
    <fullName>BI_Discount__c</fullName>
    <label>Discount ($ or %)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>