_Source/force-app/main/default/objects/BI_Tactical_Line_Item__c/fields/BI_Discount_Entered_As__c.field-meta.xml
<CustomField>
    <fullName>BI_Discount_Entered_As__c</fullName>
    <label>Discount Entered As</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$ (Fixed Fair)</fullName>
            </value>
            <value>
                <fullName>% (Discount Percentage)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>