_Source/force-app/main/default/objects/BI_Tactical_Line_Item__c/fields/BI_Fixed_Fair_Represent__c.field-meta.xml
<CustomField>
    <fullName>BI_Fixed_Fair_Represent__c</fullName>
    <label>Fixed Fair Represents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Round Trip</fullName>
            </value>
            <value>
                <fullName>One Way</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>