_Source/force-app/main/default/objects/BI_Tactical_Line_Item__c/fields/BI_OnD_Segment__c.field-meta.xml
<CustomField>
    <fullName>BI_OnD_Segment__c</fullName>
    <label>OnD Segment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>