_Source/force-app/main/default/objects/BI_Tactical_Line_Item__c/fields/BI_Proposal_Request_Form__c.field-meta.xml
<CustomField>
    <fullName>BI_Proposal_Request_Form__c</fullName>
    <label>Proposal Request Form</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Tactical Line Items can only be created for Corporate Tacticals as part of the Approved Deal snapshot</errorMessage>
        <filterItems>
            <field>BI_Proposal_Request_Form__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>BI_Tactical_Incentive_Proposal_Request_Form</value>
        </filterItems>
        <infoMessage>The Corporate Tactical Incentive that the line item will be associated with</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BI_Proposal_Request_Form__c</referenceTo>
    <relationshipLabel>Tactical Details - Line Items</relationshipLabel>
    <relationshipName>BI_Tactical_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>