_Source/force-app/main/default/objects/BI_Tactical_Line_Item__c/fields/BI_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>